<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/library_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/library_field_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/library_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/library_layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/library_field_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/library_input_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:inputType="text|textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/library_input_debian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/library_field_debian" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/library_layout_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/library_field_note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/library_input_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
